# Extract_data_from_carrefouregypt

./: Carfoor_oil.xlsx  Makefile  README.md  pyproject.toml
Web_Scaping Code/: python scraper.py
notebooks/: Carfoor_Honey.xlsx  Carfoor_oil.xlsx  Carfoor_pickles.xlsx  Carfoor_tamr.xlsx  Honeycarrefouregypt.ipynb  Tamrcarrefouregypt.ipynb  carrefouregypt.ipynb  pickles.ipynb
