[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "web_priject"
version = "0.0.1"
description = "Extract all data about  ccds https://github.com/drivendataorg/cookiecutter-data-science"
authors = [
  { name = "omar badr" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=12..0"


[tool.ruff]
line-length = 99
src = ["web_priject"]
include = ["pyproject.toml", "web_priject/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["web_priject"]
force-sort-within-sections = true

